--- a/music_controller/frontend/templates/frontend/index.html
+++ b/music_controller/frontend/templates/frontend/index.html
@@ -6,18 +6,28 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Music Controller</title>
-        {% comment %} will allow to look at js code that will be bundleing {% endcomment %}
+        
+        <!-- Load static files -->
         {% load static %}
+        
+        <!-- Load jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-        />
-        <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"
-        />
+        
+        <!-- Load Google fonts -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+        
+        <!-- Load CSS stylesheets -->
+        <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}">
     </head>
     <body>
         <h1>Music Controller</h1>
+        
+        <!-- Main content -->
+        <div id="main">
+            <div id="app"> </div>
+        </div>
+        
+        <!-- Load JavaScript files -->
+        <script src="{% static "frontend/main.js" %}"></script>
     </body>
-
 </html>
