--- a/music_controller/frontend/templates/frontend/index.html
+++ b/music_controller/frontend/templates/frontend/index.html
@@ -1,33 +1,34 @@
-
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
+        <!-- Set the character encoding -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Set the viewport size and zoom level -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Set the title of the page -->
         <title>Music Controller</title>
-        
-        <!-- Load static files -->
-        {% load static %}
-        
-        <!-- Load jQuery library -->
+
+        <!-- Load the static CSS file for the frontend -->
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
+
+        <!-- Load the Roboto font for consistent styling -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
+
+        <!-- Load the jQuery library for AJAX requests -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        
-        <!-- Load Google fonts -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-        
-        <!-- Load CSS stylesheets -->
-        <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}">
+
+        <!-- Load the frontend JavaScript bundle -->
+        <script defer src="{% static 'frontend/main.js' %}"></script>
     </head>
     <body>
         <h1>Music Controller</h1>
-        
+
         <!-- Main content -->
-        <div id="main">
-            <div id="app"> </div>
-        </div>
-        
-        <!-- Load JavaScript files -->
-        <script src="{% static "frontend/main.js" %}"></script>
+        <main>
+            <div id="app"></div>
+        </main>
     </body>
 </html>
+
